WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192474
Content Extensions: Misc fixes to debugging / perf testing code
https://bugs.webkit.org/show_bug.cgi?id=192474
Summary
Content Extensions: Misc fixes to debugging / perf testing code
Adrian Perez
Reported
2018-12-06 13:24:45 PST
Content Extensions: Misc fixes to debugging / perf testing code
Attachments
Patch
(3.99 KB, patch)
2018-12-06 13:28 PST
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.98 KB, patch)
2018-12-06 13:56 PST
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2018-12-06 13:28:46 PST
Created
attachment 356746
[details]
Patch
Mark Lam
Comment 2
2018-12-06 13:46:49 PST
Comment on
attachment 356746
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=356746&action=review
> Source/WebCore/ChangeLog:9 > + debuggin features enabled. In particular, building with
/debuggin/debugging/
Adrian Perez
Comment 3
2018-12-06 13:50:16 PST
(In reply to Mark Lam from
comment #2
)
> Comment on
attachment 356746
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=356746&action=review
> > > Source/WebCore/ChangeLog:9 > > + debuggin features enabled. In particular, building with > > /debuggin/debugging/
Oh, thanks, I'll fix the typo before landing 👍
Adrian Perez
Comment 4
2018-12-06 13:56:56 PST
Created
attachment 356751
[details]
Patch for landing
WebKit Commit Bot
Comment 5
2018-12-06 14:35:02 PST
Comment on
attachment 356751
[details]
Patch for landing Clearing flags on attachment: 356751 Committed
r238942
: <
https://trac.webkit.org/changeset/238942
>
WebKit Commit Bot
Comment 6
2018-12-06 14:35:04 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-12-06 14:36:33 PST
<
rdar://problem/46535962
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug